--- a/app/src/main/res/drawable/img_vector.xml
+++ b/app/src/main/res/drawable/img_vector.xml
@@ -1,3 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="21.00dp" android:height="27.00dp" android:viewportWidth="21" android:viewportHeight="27">
-    <path android:fillColor="#FF01AB6C" android:pathData="M0 26.57c0-5.59 4.53-10.12 10.12-10.12 5.59 0 10.12 4.53 10.12 10.12H0Zm10.12-11.39c-4.2 0-7.59-3.4-7.59-7.59C2.53 3.4 5.93 0 10.12 0c4.2 0 7.59 3.4 7.59 7.6 0 4.19-3.4 7.58-7.59 7.58Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="30.00dp" android:height="27.00dp" android:viewportWidth="30" android:viewportHeight="27">
+    <path android:fillColor="#FF01AB6C" android:pathData="M1.5 0h27C29.33 0 30 0.67 30 1.5v24c0 0.83-0.67 1.5-1.5 1.5h-27C0.67 27 0 26.33 0 25.5v-24C0 0.67 0.67 0 1.5 0Zm6 15v6h3v-6h-3Zm6-9v15h3V6h-3Zm6 4.5V21h3V10.5h-3Z"/>
 </vector>
