--- a/app/src/main/res/drawable/img_vector2.xml
+++ b/app/src/main/res/drawable/img_vector2.xml
@@ -1,3 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="6.00dp" android:height="9.00dp" android:viewportWidth="6" android:viewportHeight="9">
-    <path android:fillColor="#FFFF0000" android:pathData="M3.82 4.5L0 1l1.1-1L6 4.5 1.1 9 0 8l3.82-3.5Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="15.00dp" android:height="10.00dp" android:viewportWidth="15" android:viewportHeight="10">
+    <path android:fillColor="#FFFFFFFF" android:pathData="M7.5 6.36L13.33 0 15 1.82 7.5 10 0 1.82 1.67 0 7.5 6.36Z"/>
 </vector>
