--- a/app/src/main/res/layout/fragment_dompet.xml
+++ b/app/src/main/res/layout/fragment_dompet.xml
@@ -194,12 +194,17 @@
         android:layout_marginTop="271dp"
         android:layout_gravity="top|center_horizontal">
 
-        <ImageView
+        <LinearLayout
+            android:id="@+id/itemcatatan"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:layout_gravity="top"
-            android:scaleType="centerCrop"
-            android:src="@drawable/drawable_image_6" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+        <LinearLayout
+            android:id="@+id/catatanLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
     </FrameLayout>
 
     <ImageView
